[gd_scene load_steps=8 format=3 uid="uid://b58sux74o2wjs"]

[ext_resource type="Script" uid="uid://dhl2sjde6bkl6" path="res://Scripts/shop.gd" id="1_a0mxf"]
[ext_resource type="PackedScene" uid="uid://b2utovt4d6tv8" path="res://Scenes/store_item.tscn" id="2_2shtd"]

[sub_resource type="CanvasTexture" id="CanvasTexture_6mhmv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2shtd"]
bg_color = Color(0.577697, 0.708223, 0.930097, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_io27d"]
bg_color = Color(0.576471, 0.709804, 0.929412, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fdj0q"]
bg_color = Color(0.576471, 0.709804, 0.929412, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k6jq0"]
bg_color = Color(0.576471, 0.709804, 0.929412, 1)

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a0mxf")

[node name="Background" type="TextureRect" parent="."]
self_modulate = Color(0.231373, 0.458824, 0.203922, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CanvasTexture_6mhmv")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -225.0
offset_right = 240.0
offset_bottom = 324.0
grow_vertical = 2
theme_override_constants/separation = -1

[node name="Costume" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0, 0.734863, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/pressed = SubResource("StyleBoxFlat_2shtd")
toggle_mode = true
text = "Costume"

[node name="Skills" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0, 0.733333, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/pressed = SubResource("StyleBoxFlat_io27d")
toggle_mode = true
text = "Skills"

[node name="Weapons" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0, 0.733333, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/pressed = SubResource("StyleBoxFlat_fdj0q")
toggle_mode = true
text = "Weapons"

[node name="Equipment" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0, 0.733333, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/pressed = SubResource("StyleBoxFlat_k6jq0")
toggle_mode = true
text = "Equipment"

[node name="Panel" type="Panel" parent="VBoxContainer"]
self_modulate = Color(0.769244, 0.560079, 0.578251, 1)
layout_mode = 2
size_flags_vertical = 3

[node name="Costume" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -335.0
offset_top = -224.0
offset_right = 576.0
offset_bottom = 325.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="Costume"]
layout_mode = 0
offset_left = 1.0
offset_top = 52.0
offset_right = 910.0
offset_bottom = 386.0
theme_override_constants/h_separation = 30
theme_override_constants/v_separation = 40
columns = 5

[node name="Costume 1" parent="Costume/GridContainer" instance=ExtResource("2_2shtd")]
layout_mode = 2

[node name="TextureRect" parent="Costume/GridContainer/Costume 1" index="0"]
self_modulate = Color(0.993752, 0.733883, 0.81683, 1)

[node name="Costume 2" parent="Costume/GridContainer" instance=ExtResource("2_2shtd")]
layout_mode = 2

[node name="Costume 3" parent="Costume/GridContainer" instance=ExtResource("2_2shtd")]
layout_mode = 2

[node name="Costume 4" parent="Costume/GridContainer" instance=ExtResource("2_2shtd")]
layout_mode = 2

[node name="Costume 5" parent="Costume/GridContainer" instance=ExtResource("2_2shtd")]
layout_mode = 2

[node name="Costume 6" parent="Costume/GridContainer" instance=ExtResource("2_2shtd")]
layout_mode = 2

[node name="Skills" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -335.0
offset_top = -224.0
offset_right = 576.0
offset_bottom = 325.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="Skills"]
layout_mode = 0
offset_left = 1.0
offset_top = 52.0
offset_right = 910.0
offset_bottom = 386.0
theme_override_constants/h_separation = 30
theme_override_constants/v_separation = 40
columns = 5

[node name="Skill 1" parent="Skills/GridContainer" instance=ExtResource("2_2shtd")]
layout_mode = 2

[node name="TextureRect" parent="Skills/GridContainer/Skill 1" index="0"]
self_modulate = Color(0.993752, 0.733883, 0.81683, 1)

[node name="Skill 2" parent="Skills/GridContainer" instance=ExtResource("2_2shtd")]
layout_mode = 2

[node name="TextureRect" parent="Skills/GridContainer/Skill 2" index="0"]
self_modulate = Color(0.993752, 0.733883, 0.81683, 1)

[node name="Skill 3" parent="Skills/GridContainer" instance=ExtResource("2_2shtd")]
layout_mode = 2

[node name="TextureRect" parent="Skills/GridContainer/Skill 3" index="0"]
self_modulate = Color(0.993752, 0.733883, 0.81683, 1)

[node name="Skill 4" parent="Skills/GridContainer" instance=ExtResource("2_2shtd")]
layout_mode = 2

[node name="TextureRect" parent="Skills/GridContainer/Skill 4" index="0"]
self_modulate = Color(0.993752, 0.733883, 0.81683, 1)

[node name="Skill 5" parent="Skills/GridContainer" instance=ExtResource("2_2shtd")]
layout_mode = 2

[node name="TextureRect" parent="Skills/GridContainer/Skill 5" index="0"]
self_modulate = Color(0.993752, 0.733883, 0.81683, 1)

[node name="Skill 6" parent="Skills/GridContainer" instance=ExtResource("2_2shtd")]
layout_mode = 2

[node name="TextureRect" parent="Skills/GridContainer/Skill 6" index="0"]
self_modulate = Color(0.993752, 0.733883, 0.81683, 1)

[node name="Weapons" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -335.0
offset_top = -224.0
offset_right = 576.0
offset_bottom = 325.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="Weapons"]
layout_mode = 0
offset_left = 1.0
offset_top = 52.0
offset_right = 910.0
offset_bottom = 386.0
theme_override_constants/h_separation = 30
theme_override_constants/v_separation = 40
columns = 5

[node name="Skill 1" parent="Weapons/GridContainer" instance=ExtResource("2_2shtd")]
layout_mode = 2

[node name="TextureRect" parent="Weapons/GridContainer/Skill 1" index="0"]
self_modulate = Color(0.758774, 0.878858, 0.371976, 1)

[node name="Skill 2" parent="Weapons/GridContainer" instance=ExtResource("2_2shtd")]
layout_mode = 2

[node name="TextureRect" parent="Weapons/GridContainer/Skill 2" index="0"]
self_modulate = Color(0.993752, 0.733883, 0.81683, 1)

[node name="Skill 3" parent="Weapons/GridContainer" instance=ExtResource("2_2shtd")]
layout_mode = 2

[node name="TextureRect" parent="Weapons/GridContainer/Skill 3" index="0"]
self_modulate = Color(0.993752, 0.733883, 0.81683, 1)

[node name="Skill 4" parent="Weapons/GridContainer" instance=ExtResource("2_2shtd")]
layout_mode = 2

[node name="TextureRect" parent="Weapons/GridContainer/Skill 4" index="0"]
self_modulate = Color(0.993752, 0.733883, 0.81683, 1)

[node name="Skill 5" parent="Weapons/GridContainer" instance=ExtResource("2_2shtd")]
layout_mode = 2

[node name="TextureRect" parent="Weapons/GridContainer/Skill 5" index="0"]
self_modulate = Color(0.993752, 0.733883, 0.81683, 1)

[node name="Skill 6" parent="Weapons/GridContainer" instance=ExtResource("2_2shtd")]
layout_mode = 2

[node name="TextureRect" parent="Weapons/GridContainer/Skill 6" index="0"]
self_modulate = Color(0.993752, 0.733883, 0.81683, 1)

[node name="Equipment" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -335.0
offset_top = -224.0
offset_right = 576.0
offset_bottom = 325.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="Equipment"]
layout_mode = 0
offset_left = 1.0
offset_top = 52.0
offset_right = 910.0
offset_bottom = 386.0
theme_override_constants/h_separation = 30
theme_override_constants/v_separation = 40
columns = 5

[node name="Skill 1" parent="Equipment/GridContainer" instance=ExtResource("2_2shtd")]
layout_mode = 2

[node name="TextureRect" parent="Equipment/GridContainer/Skill 1" index="0"]
self_modulate = Color(0.572041, 0.876755, 0.922636, 1)

[node name="Skill 2" parent="Equipment/GridContainer" instance=ExtResource("2_2shtd")]
layout_mode = 2

[node name="TextureRect" parent="Equipment/GridContainer/Skill 2" index="0"]
self_modulate = Color(0.993752, 0.733883, 0.81683, 1)

[node name="Skill 3" parent="Equipment/GridContainer" instance=ExtResource("2_2shtd")]
layout_mode = 2

[node name="TextureRect" parent="Equipment/GridContainer/Skill 3" index="0"]
self_modulate = Color(0.993752, 0.733883, 0.81683, 1)

[node name="Skill 4" parent="Equipment/GridContainer" instance=ExtResource("2_2shtd")]
layout_mode = 2

[node name="TextureRect" parent="Equipment/GridContainer/Skill 4" index="0"]
self_modulate = Color(0.993752, 0.733883, 0.81683, 1)

[node name="Skill 5" parent="Equipment/GridContainer" instance=ExtResource("2_2shtd")]
layout_mode = 2

[node name="TextureRect" parent="Equipment/GridContainer/Skill 5" index="0"]
self_modulate = Color(0.993752, 0.733883, 0.81683, 1)

[node name="Skill 6" parent="Equipment/GridContainer" instance=ExtResource("2_2shtd")]
layout_mode = 2

[node name="TextureRect" parent="Equipment/GridContainer/Skill 6" index="0"]
self_modulate = Color(0.993752, 0.733883, 0.81683, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_right = -89.0
offset_bottom = 78.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "Shop"
horizontal_alignment = 1

[node name="Back" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -65.0
offset_bottom = 63.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 40
text = "X"

[connection signal="pressed" from="VBoxContainer/Costume" to="." method="_on_costume_pressed"]
[connection signal="pressed" from="VBoxContainer/Skills" to="." method="_on_skills_pressed"]
[connection signal="pressed" from="VBoxContainer/Weapons" to="." method="_on_weapons_pressed"]
[connection signal="pressed" from="VBoxContainer/Equipment" to="." method="_on_equipment_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]

[editable path="Costume/GridContainer/Costume 1"]
[editable path="Skills/GridContainer/Skill 1"]
[editable path="Skills/GridContainer/Skill 2"]
[editable path="Skills/GridContainer/Skill 3"]
[editable path="Skills/GridContainer/Skill 4"]
[editable path="Skills/GridContainer/Skill 5"]
[editable path="Skills/GridContainer/Skill 6"]
[editable path="Weapons/GridContainer/Skill 1"]
[editable path="Weapons/GridContainer/Skill 2"]
[editable path="Weapons/GridContainer/Skill 3"]
[editable path="Weapons/GridContainer/Skill 4"]
[editable path="Weapons/GridContainer/Skill 5"]
[editable path="Weapons/GridContainer/Skill 6"]
[editable path="Equipment/GridContainer/Skill 1"]
[editable path="Equipment/GridContainer/Skill 2"]
[editable path="Equipment/GridContainer/Skill 3"]
[editable path="Equipment/GridContainer/Skill 4"]
[editable path="Equipment/GridContainer/Skill 5"]
[editable path="Equipment/GridContainer/Skill 6"]
